# data/deleteSkillCategoryByAdmin.js
@@ -1,0 +1,13 @@
+'use strict';
+var Mockgen = require('./mockgen.js');
+module.exports = {
+    get: {
+        200: function (req, res, callback) {
+            Mockgen().responses({
+                path: '/deleteSkillCategoryByAdmin',
+                operation: 'put',
+                response: '200'
+            }, callback);
+        }
+    }
+};
